--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # will have compiled files and executables
 debug/
 target/
+# this will be built in github
+artifacts/*.wasm
+artifacts/checksums.txt
+
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
