--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ schemars = "0.8.16"
 serde = { version = "1.0.196", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.56" }
 treasurechest = { path = "packages/treasurechest" }
+injective_auction = { path = "packages/injective_auction" }
 cw-multi-test = { version="0.20.0" , features = ["cosmwasm_1_2"] }
 pfc-whitelist = "1.4.0"
 pfc-whitelist-derive = "1.4.0"
@@ -42,6 +43,7 @@ prost = { version = "0.12.3", default-features = false, features = ["prost-deriv
 prost-types = { version = "0.12.3", default-features = false }
 protobuf = { version = "3.3.0", features = ["with-bytes"] }
 getrandom = { version = "0.2", features = ["js"] }
+
 [profile.release]
 codegen-units = 1
 debug = false
@@ -52,3 +54,4 @@ opt-level = 3
 overflow-checks = true
 rpath = false
 panic = 'abort'
+
