--- a/packages/injective_auction/Cargo.toml
+++ b/packages/injective_auction/Cargo.toml
@@ -12,14 +12,15 @@ keywords = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-serde = {workspace=true}
-schemars = {workspace=true }
+serde = { workspace = true }
+schemars = { workspace = true }
 cosmwasm-std = { workspace = true }
 cosmwasm-schema = { workspace = true }
 thiserror = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
-osmosis-std-derive = {workspace=true}
+osmosis-std-derive = { workspace = true }
+treasurechest = { workspace = true }
 
 [dev-dependencies]
 protobuf = { workspace = true }
