--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ cosmwasm-std = { version = "1.5.3", features = [
   # Kuji is  @ 1.2
   "cosmwasm_1_2",
   "iterator",
-  "stargate"
+  "stargate",
 ] }
 cw-storage-plus = "1.2.0"
 cosmwasm-storage = "1.5.2"
@@ -33,16 +33,19 @@ serde = { version = "1.0.196", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.56" }
 treasurechest = { path = "packages/treasurechest" }
 injective_auction = { path = "packages/injective_auction" }
-cw-multi-test = { version="0.20.0" , features = ["cosmwasm_1_2"] }
+cw-multi-test = { version = "0.20.0", features = ["cosmwasm_1_2"] }
 pfc-whitelist = "1.4.0"
 pfc-whitelist-derive = "1.4.0"
 cw-item-set = "0.7.1"
 cw-utils = "1.0.3"
 osmosis-std-derive = "0.15.3"
-prost = { version = "0.12.3", default-features = false, features = ["prost-derive"] }
+prost = { version = "0.12.3", default-features = false, features = [
+  "prost-derive",
+] }
 prost-types = { version = "0.12.3", default-features = false }
 protobuf = { version = "3.3.0", features = ["with-bytes"] }
 getrandom = { version = "0.2", features = ["js"] }
+cw-paginate-storage = "2.3.0"
 
 [profile.release]
 codegen-units = 1
@@ -54,4 +57,3 @@ opt-level = 3
 overflow-checks = true
 rpath = false
 panic = 'abort'
-
