fix(smart-contracts): move start bid to a different function, rename subdenom, update ownership using cw_ownable

--- a/packages/injective_auction/Cargo.toml
+++ b/packages/injective_auction/Cargo.toml
@@ -21,6 +21,7 @@ prost = { workspace = true }
 prost-types = { workspace = true }
 osmosis-std-derive = { workspace = true }
 treasurechest = { workspace = true }
+cw-ownable = { workspace = true }
 
 [dev-dependencies]
 protobuf = { workspace = true }
