--- a/packages/injective_auction/Cargo.toml
+++ b/packages/injective_auction/Cargo.toml
@@ -22,6 +22,6 @@ prost-types = { workspace = true }
 osmosis-std-derive = { workspace = true }
 treasurechest = { workspace = true }
 cw-ownable = { workspace = true }
-
+injective-protobuf = "0.2.2"
 [dev-dependencies]
 protobuf = { workspace = true }
