--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,12 @@ members = ["contracts/*", "integration", "packages/*"]
 resolver = "2"
 
 [workspace.package]
-version = "0.1.2"
+version = "0.1.3"
 authors = [
   "Kerber0x <kerber0x@protonmail.com>",
   "Nahem <nahemseguias@gmail.com>",
-  "PFC <pfc@pfc.zone>"]
+  "PFC <pfc@pfc.zone>",
+]
 edition = "2021"
 rust-version = "1.73.0"
 license = "Apache-2.0"
@@ -17,10 +18,8 @@ documentation = "https://github.com/PFC-Validator/pfc-butler#readme"
 keywords = ["blockchain", "cosmos", "cosmwasm"]
 
 [workspace.dependencies]
-
 cw-ownable = "0.5"
 cw-ownable-derive = "0.5.1"
-
 cosmwasm-schema = "1.5.5"
 cosmwasm-std = { version = "1.5.5", features = [
   # Kuji is  @ 1.2
@@ -51,6 +50,7 @@ prost-types = { version = "0.12.3", default-features = false }
 protobuf = { version = "3.3.0", features = ["with-bytes"] }
 getrandom = { version = "0.2", features = ["js"] }
 cw-paginate-storage = "2.3.0"
+semver = "1.0.23"
 
 [profile.release]
 codegen-units = 1
