--- a/contracts/injective-auction-pool/Cargo.toml
+++ b/contracts/injective-auction-pool/Cargo.toml
@@ -29,12 +29,14 @@ cw2 = { workspace = true }
 cw-storage-plus = { workspace = true }
 thiserror = { workspace = true }
 injective_auction = { workspace = true }
-injective-std = {workspace = true}
+injective-std = { workspace = true }
 prost = { workspace = true }
 cw-utils = { workspace = true }
 treasurechest = { workspace = true }
 cw-paginate-storage = { workspace = true }
 cw-ownable = { workspace = true }
+semver = { workspace = true }
+
 
 [dev-dependencies]
 cw-multi-test = { workspace = true }
